--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github repo</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h1>i can push to github</h1>
     <h2>mama i can code now</h2>
     <h3>new code changed
     </h3>
+    <p>this is a paragraph</p>
+    <p>i can do coding
+    </p>
 </body>
 </html>
